Ensure date column text does not wrap

--- a/src/main/resources/static/css/tournaments.css
+++ b/src/main/resources/static/css/tournaments.css
@@ -110,7 +110,7 @@ a:hover {
   }
 
   td:first-child {
-    width: 16%;
+    white-space: nowrap;
   }
 
   .row-tournament-name {
